1.3.3
Large font?

1.3.2

terminal type preference, eg. vt320 etc
joystick operates the cursor all the time rather than just in cursor mode
FAILED Ssh2 lite < 64KB?
rotated version - so it could be wider than tall
Find and fix disconnection on blackberry using ssh2 when pressing backspace in typing mode
Fixed 1.3.1 bug where you could no longer connect on MIDP 1.0 phones!

1.3.1

Changed select command code so that it shouldn't appear twice on the Blackberry,
and may work better on midp 1.0 phones.
Fixed SSH1 lite size so that it will work better on 64KB limited phones.
Fixed SSH2 idle disconnect problem

1.2.2
Fixed exceptions when using edit/delete etc on empty lists (session menu, macros menu)


1.2.1
Reinstated special midp2 enhancements; preprocess symbol wasn't being set correctly

1.2
SSH2 support